// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react/UITextarea renders correctly - autocomplete off 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="off"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - basic 1`] = `
<div>
  <div
    class="ui-textarea ui-textarea--large"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
      >
        test
      </textarea>
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - disabled 1`] = `
<div>
  <div
    class="ui-textarea ui-textarea--disabled"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        disabled=""
        id="z8a8d7a5zad4"
        name="test"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - readonly 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        readonly=""
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - with cols and rows 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        cols="10"
        id="z8a8d7a5zad4"
        name="test"
        rows="50"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - with helper 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
      />
    </div>
    <span
      class="ui-textarea__helper"
    >
      test
    </span>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - with id 1`] = `
<div>
  <div
    class="ui-textarea"
    id="test"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - with label 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <label
      class="ui-textarea__label"
      for="z8a8d7a5zad4"
    >
      <strong>
        test
      </strong>
    </label>
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - with listener and debounce 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
      >
        new test
      </textarea>
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - with listeners 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
      >
        new test
      </textarea>
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - with maxlength 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        maxlength="10"
        name="test"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - with placeholder 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
        placeholder="test"
      />
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - with transform 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
      >
        NEW TEST
      </textarea>
    </div>
  </div>
</div>
`;

exports[`react/UITextarea renders correctly - with value 1`] = `
<div>
  <div
    class="ui-textarea"
  >
    <div
      class="ui-textarea__wrapper"
    >
      <textarea
        autocomplete="on"
        class="ui-textarea__wrapper__field"
        id="z8a8d7a5zad4"
        name="test"
      >
        test
      </textarea>
    </div>
  </div>
</div>
`;
